--- a/styles/insta_style.css
+++ b/styles/insta_style.css
@@ -12,7 +12,7 @@ body{
     grid-template-rows: 286px 286px 286px;
     gap: 15px 18px; */
     grid-template-columns: repeat(3, minmax(100px, 293px));
-    grid-template-rows: auto;
+    grid-template-rows: fit-content;
     /* grid-template-rows: 286px 286px 286px; */
     gap: 28px;
     justify-content: center;
@@ -65,7 +65,7 @@ body{
     }
 }
 
-nav{
+.main-nav{
     border-bottom: 1px solid rgb(211, 211, 211);
     height: 53px;
 }
@@ -421,4 +421,34 @@ border-radius: 50%;
 .line-icon-tag{
     color: rgb(114, 114, 114);
     font-weight: 600;
+}
+
+footer{
+    /* display: grid;
+    grid-template-columns: fit-content;
+    grid-template-rows: fit-content;
+    justify-content: center; */
+    display: flex;
+    justify-content: center;
+    padding: 38px 0;
+}
+
+footer ul{
+    padding: 0;
+    margin: 0;
+}
+
+footer ul li a{
+    text-decoration: none;
+    font-size: 11.7px;
+    font-weight: 600;
+    color: rgb(43, 43, 161);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.copyright-container {
+    margin: 0;
+    font-size: 11.7px;
+    font-weight: 600;
+    color: rgb(139, 139, 139);
 }
