--- a/styles/insta_style.css
+++ b/styles/insta_style.css
@@ -68,6 +68,7 @@ body{
 .main-nav{
     border-bottom: 1px solid rgb(211, 211, 211);
     height: 53px;
+    background-color: white;
 }
 
 .nav-content{
